# pyWOD

./: pyproject.toml  wod.pptx
pywod/: __main__.py
